[package]
name = "invoice-escrow"
version = "0.1.0"
edition = "2021"
description = "StellarSettle invoice escrow contract"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[dev-dependencies]
invoice-token = { path = "../invoice-token" }
