[package]
name = "payment-distributor"
version = "0.1.0"
edition = "2021"
description = "StellarSettle payment distribution contract"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
invoice-escrow = { path = "../invoice-escrow" }
invoice-token = { path = "../invoice-token" }
